🖼 Fix website overflow

--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ body {
   position: absolute;
   margin-top: 10vh;
   pointer-events: none;
+  overflow-x: hidden;
 }
 
 #RightPanel {
@@ -117,6 +118,9 @@ body {
   background-color: var(--mouse-glow-color);
   border-radius: 50%;
   pointer-events: none;
+  overflow: hidden;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 #MouseGlowBlur {
@@ -124,6 +128,7 @@ body {
   height: 100%;
   position: absolute;
   backdrop-filter: blur(var(--mouse-glow-blur));
+  overflow: hidden;
 }
 
 /******************************************************************************/
@@ -525,6 +530,7 @@ p {
 @media screen and (max-width: 1200px) {
   body {
     overflow-y: auto;
+	overflow-x: hidden;
   }
 
   #MainDiv {
@@ -532,6 +538,7 @@ p {
     height: auto;
     min-height: 100vh;
     overflow: visible;
+	overflow-x: hidden;
   }
 
   #ContentWrapper {
@@ -546,6 +553,7 @@ p {
     margin: 0 auto;
     text-align: center;
 	order: 1;
+	overflow-x: hidden;
   }
 
   #RightPanel {
@@ -554,8 +562,9 @@ p {
     height: auto;
     padding: 0;
     margin: 0 auto;
-    overflow-y: visible;
 	order: 2;
+    overflow-y: visible;
+	overflow-x: hidden;
   }
 
   #ControlPanel {
